edited photo and links

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <br>
   <h1>Anna Sours Biography</h1>
   <hr>
-  <img width="200" src= "https://i.quotev.com/img/q/u/18/4/2/nrgepkuzxn.jpg" alt="pic of me here"/></p>
+  <img width="200" src= "assets/headshot.png" alt="Anna Sours headshot"/></p>
   <!-- save this asset(pic) to your local projects folder -->
   <section>
     <h2>Two paragraphs biography</h2>
@@ -32,9 +32,8 @@
 
 <section>
   <ul>
-    <li><a href='https://github.com/acsours'>Github link here</a></li>
-    <li>Linkedin link here</li>
-    <li>other account?</li>
+    <li><a href='https://github.com/acsours'target="_blank">Github</a></li>
+    <li><a href='https://www.linkedin.com/in/anna-sours/' target="_blank">LinkedIn</a></li>
   </ul>
 </section>
 
