added basic skills table

--- a/index.html
+++ b/index.html
@@ -37,6 +37,54 @@
   </ul>
 </section>
 
+<section>
+  <table border="1">
+    <thead>
+      <tr>
+        <th colspan="2">Skills</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Python</td>
+        <td>*****</td>
+      </tr>
+      <tr>
+        <td>ExcelVBA</td>
+        <td>*****</td>
+      </tr>
+      <tr>
+        <td>SQL</td>
+        <td>*****</td>
+      </tr>
+      <tr>
+        <td>Pandas</td>
+        <td>*****</td>
+      </tr>
+      <tr>
+        <td>Matplotlib</td>
+        <td>*****</td>
+      </tr>
+      <tr>
+        <td>JavaScript</td>
+        <td>*****</td>
+      </tr>
+      <tr>
+        <td>Tableau</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>R</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>Machine Learning</td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
+
+</section>
 <!-- create a table with skills I'm familiar with (tehnologies) -->
 
 
