--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <ul>
     <li><a href='https://github.com/acsours'target="_blank">Github</a></li>
     <li><a href='https://www.linkedin.com/in/anna-sours/' target="_blank">LinkedIn</a></li>
+    <li>Email: acsours@gmail.com</li>
   </ul>
 </section>
 
