some style added

--- a/index.html
+++ b/index.html
@@ -3,11 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <title>Activity 1: Basic HTML Bio</title>
- 
+  <style>
+    h1 {
+      margin-bottom: 15px;
+      text-align: center;
+    }
+    h2 {
+      text-align: center;
+    }
+
+    img {
+      margin-left: auto;
+      margin-right: auto;
+      display: block;
+    }
+
+    p {
+      text-align: center;
+    }
+
+    ul {
+      text-align: center;
+      /* font-size: 30px; */
+      list-style-position: inside;
+    }
+
+    table {
+      margin-left: auto;
+      margin-right: auto;
+    }
+  </style>
 </head>
 
 <body>
   <br>
+  <hr>
   <h1>Anna Sours Biography</h1>
   <hr>
   <img width="200" src= "assets/headshot.png" alt="Anna Sours headshot"/></p>
